--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
+    "html-hint": "^0.2.4",
     "htmlhint": "^0.9.13",
     "mocha": "^5.1.1",
     "nyc": "^11.7.1",
     "opener": "^1.4.3"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1"
   }
 }
